# zephyr

./: .gitignore  Cargo.toml  Dockerfile  README.md  config.toml  tags
config/: feature_flags.rs
contracts/: DIDRegistry.sol
docs/: Zephyr Draft v2.docx  Zephyr Draft v2.txt  Zephyr Known Weaknesses.docx  interoperability.md  ~$phyrChain Overview v2.docx
docs/qup/: index.md
src/: constraint_system.rs  data_loading.rs  main.rs  model_initialization.rs  result_reporting.rs  training_orchestration.rs  ui.rs  zephyrchain_circuit.rs
src/api/: api.rs  mod.rs
src/chain/: block.rs  block_tests.rs  blockchain.rs  certificate_authority.rs  common.rs  mod.rs  node.rs  quantum_entropy.rs  shard.rs  shard_committee.rs  shard_recovery.rs  sharding.rs  state_transition.rs  transaction.rs  validation.rs  wallet.rs
src/common/: encoding_utils.rs  state_utils.rs
src/config/: node_config.rs
src/consensus/: atomic_commit.rs  global_ordering.rs
src/datasets/: mod.rs
src/did/: did.rs  did_document.rs  did_resolver.rs  key_manager.rs  verifiable_credential.rs
src/error_handling/: error.rs  error_reporter.rs  error_utils.rs  mod.rs  network_error.rs  result.rs
src/game_theory/: mod.rs  reputation.rs  reward_manager.rs  verification_game.rs
src/hardware_assessment/: mod.rs  requirements.rs
src/hdcmodels/: benchmark.rs  concept_drift.rs  encoding.rs  hdcmodels.rs  mod.rs  parallel_processing.rs  quantum_annealing.rs  quantum_approximate_optimization.rs  quantum_encoding.rs  quantum_machine_learning.rs  quantum_similarity.rs  services.rs  similarity.rs
src/marketplace/: bid.rs  errors.rs  marketplace.rs  message_format.rs  reputation.rs  task.rs
src/mining/: block_producer.rs  miner.rs  mining_config.rs  mod.rs  transaction_pool.rs
src/network/: client.rs  config.rs  connection_manager.rs  discovery.rs  error.rs  gossip.rs  handler.rs  (+19 more)
tests/: did_tests.rs
(+326 files in other folders)
