[package]
name = "zephyr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winterfell = "0.8.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aes-gcm = "0.10.3"
rand = "0.8.0"
log = "0.4"
env_logger = "0.11.3"
sha2 = "0.10.8"
rustls = "0.23.2"
tokio-rustls = "0.25.0"
tokio = { version = "1", features = ["full"] }
webpki-roots = "0.26.1"
secp256k1 = "0.28.2"
warp = "0.3"
serde_derive = "1.0"
blake3 = "1.2.0"
rayon = "1.9.0"
num = "0.4.1"
hex = "0.4.3"
thiserror = "1.0.57"
crystals-dilithium = "1.0.0"
x509-certificate = "0.23.1"
webpki = "0.22.0"
bincode = "2.0.0-rc.3"
chrono = "0.4.35"
num-bigint = "0.4.4"
num-traits = "0.2.18"
regex = "1.10.3"
libp2p = { version = "0.52", features = ["tcp", "tls", "dns", "async-std", "noise", "yamux", "websocket", "ping", "macros"] }
    async-std = { version = "1.12.0", features = ["attributes"] }
    tracing-subscriber = { version = "0.3", features = ["env-filter"] }
config = "0.14.0"
curve25519-dalek = "4.1.2"
rand_core = "0.6.4"
sha3 = "0.10.8"
pbkdf2 = "0.13.0-pre.0"
zeroize = "1.7.0"
parking_lot = "0.12.1"
futures = "0.3.30"
async-trait = "0.1.78"
flate2 = "1.0.28"
zstd = "0.13.0"
chacha20poly1305 = "0.10.1"
jsonwebtoken = "7.2.0"
secrecy = "0.8"
uuid = "0.8.2"
generic-array = "0.14.6"
typenum = "1.16.0"
merkle = "1.11.0"
pqcrypto-kyber = "0.8.1"
pqcrypto-dilithium = "0.5.0"
slog = "2.7.0"
slog-async = "2.7.0"
slog-term = "2.9.0"
rustls-post-quantum = "0.1.0"
crossbeam-utils = "0.8.20"
pqcrypto = "0.17.0"
pqcrypto-traits = "0.3.5"
c-kzg = "1.0.2"
rust-gpu-tools = "0.3"
bulletproofs = "5.0.0"
syn = "2.0.66"
tokenizers = "0.19.1"
tch = "0.16.0"
bellman = "0.14.0"
bert = "0.1.0"
raft = "0.7.0"
